--- a/styles/activate-power-mode.less
+++ b/styles/activate-power-mode.less
@@ -26,8 +26,8 @@
   text-align: right;
 
   .title {
-    color: white;
-    text-shadow: 2px 2px 2px #4EFFA1;
+    color: #ffb3d1;
+    text-shadow: 2px 2px 2px #ffb3d1;
     font-size: 16px;
   }
 
